force-app/main/default/objects/Implementation_Details_c__x/fields/iHotelier_Status_formula_c__c.field-meta.xml
<CustomField>
    <fullName>iHotelier_Status_formula_c__c</fullName>
    <externalDeveloperName>iHotelier_Status_formula__c</externalDeveloperName>
    <label>iHotelier Status</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>