force-app/main/default/objects/Implementation_Details_c__x/fields/Impl_Billing_Hold_c__c.field-meta.xml
<CustomField>
    <fullName>Impl_Billing_Hold_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Impl_Billing_Hold__c</externalDeveloperName>
    <inlineHelpText>Check this box if Implementation is delayed and will not be able to be completed by provided Contract Start Date.</inlineHelpText>
    <label>Impl Billing Hold</label>
    <type>Checkbox</type>
</CustomField>