force-app/main/default/objects/Implementation_Details_c__x/fields/Impl_Details_created_c__c.field-meta.xml
<CustomField>
    <fullName>Impl_Details_created_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Impl_Details_created__c</externalDeveloperName>
    <label>Impl Details created</label>
    <type>Checkbox</type>
</CustomField>