force-app/main/default/objects/Implementation_Details_c__x/fields/Impl_Manager_Cookie_c__c.field-meta.xml
<CustomField>
    <fullName>Impl_Manager_Cookie_c__c</fullName>
    <externalDeveloperName>Impl_Manager_Cookie__c</externalDeveloperName>
    <label>Impl Manager- Cookie</label>
    <length>250</length>
    <type>Text</type>
</CustomField>