force-app/main/default/objects/Implementation_Details_c__x/fields/Impl_Mgr_Air_Hotel_c__c.field-meta.xml
<CustomField>
    <fullName>Impl_Mgr_Air_Hotel_c__c</fullName>
    <externalDeveloperName>Impl_Mgr_Air_Hotel__c</externalDeveloperName>
    <label>Impl Mgr- Air+Hotel</label>
    <length>250</length>
    <type>Text</type>
</CustomField>