force-app/main/default/objects/Implementation_Details_c__x/fields/Impl_Mgr_Call_Center_PD_c__c.field-meta.xml
<CustomField>
    <fullName>Impl_Mgr_Call_Center_PD_c__c</fullName>
    <externalDeveloperName>Impl_Mgr_Call_Center_PD__c</externalDeveloperName>
    <label>Impl Mgr- Call Center PD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>