force-app/main/default/objects/Implementation_Details_c__x/fields/Impl_Mgr_EQC_c__c.field-meta.xml
<CustomField>
    <fullName>Impl_Mgr_EQC_c__c</fullName>
    <externalDeveloperName>Impl_Mgr_EQC__c</externalDeveloperName>
    <label>Impl Mgr- EQC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>