force-app/main/default/objects/Implementation_Details_c__x/fields/Implementation_Delay_Air_c__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Delay_Air_c__c</fullName>
    <externalDeveloperName>Implementation_Delay_Air__c</externalDeveloperName>
    <inlineHelpText>Open field to enter delay reasons</inlineHelpText>
    <label>Implementation Delay - Air</label>
    <length>250</length>
    <type>Text</type>
</CustomField>