force-app/main/default/objects/Implementation_Details_c__x/fields/Implementation_Delay_Web_BE_c__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Delay_Web_BE_c__c</fullName>
    <externalDeveloperName>Implementation_Delay_Web_BE__c</externalDeveloperName>
    <inlineHelpText>open field to enter delay reasons</inlineHelpText>
    <label>Implementation Delay- Web BE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>