force-app/main/default/objects/Implementation_Details_c__x/fields/Implementation_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager_c__c</fullName>
    <externalDeveloperName>Implementation_Manager__c</externalDeveloperName>
    <label>Implementation Manager</label>
    <length>40</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>TC Implementations</relationshipLabel>
    <relationshipName>TC_Implementations</relationshipName>
    <type>ExternalLookup</type>
</CustomField>