force-app/main/default/objects/Implementation_Details_c__x/fields/Implementation_Mgr_Phone_c__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Mgr_Phone_c__c</fullName>
    <externalDeveloperName>Implementation_Mgr_Phone__c</externalDeveloperName>
    <label>Implementation Mgr Phone</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>