force-app/main/default/objects/Implementation_Details_c__x/fields/Implementation_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Start_Date_c__c</fullName>
    <externalDeveloperName>Implementation_Start_Date__c</externalDeveloperName>
    <label>Implementation Start Date</label>
    <type>Date</type>
</CustomField>