force-app/main/default/objects/Implementation_Details_c__x/fields/Implementation_Survey_Completed_c__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Survey_Completed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Implementation_Survey_Completed__c</externalDeveloperName>
    <label>Implementation Survey Completed</label>
    <type>Checkbox</type>
</CustomField>