force-app/main/default/objects/Implementation_Details_c__x/fields/Implementation_Time_to_Live_c__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Time_to_Live_c__c</fullName>
    <externalDeveloperName>Implementation_Time_to_Live__c</externalDeveloperName>
    <inlineHelpText>What is the Implementation Time to setup this product in days?</inlineHelpText>
    <label>Implementation Time to Live</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>1</scale>
    <type>Number</type>
</CustomField>