force-app/main/default/objects/Implementation_Details_c__x/fields/In_Queue_c__c.field-meta.xml
<CustomField>
    <fullName>In_Queue_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>In_Queue__c</externalDeveloperName>
    <label>In Queue</label>
    <type>Checkbox</type>
</CustomField>