force-app/main/default/objects/Implementation_Details_c__x/fields/In_Queue_Date_c__c.field-meta.xml
<CustomField>
    <fullName>In_Queue_Date_c__c</fullName>
    <externalDeveloperName>In_Queue_Date__c</externalDeveloperName>
    <label>In Queue Date</label>
    <type>Date</type>
</CustomField>