force-app/main/default/objects/Implementation_Details_c__x/fields/Inactive_Implemention_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Implemention_Manager_c__c</fullName>
    <externalDeveloperName>Inactive_Implemention_Manager__c</externalDeveloperName>
    <label>Inactive Implemention Manager</label>
    <length>200</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>