force-app/main/default/objects/Implementation_Details_c__x/fields/Initial_Testing_Confirmation_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Initial_Testing_Confirmation_Goal_c__c</fullName>
    <externalDeveloperName>Initial_Testing_Confirmation_Goal__c</externalDeveloperName>
    <label>Initial Testing Confirmation Goal</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>