force-app/main/default/objects/Implementation_Details_c__x/fields/Integration_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type_c__c</fullName>
    <externalDeveloperName>Integration_Type__c</externalDeveloperName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>