force-app/main/default/objects/Implementation_Details_c__x/fields/Internal_Implementation_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Internal_Implementation_ID_c__c</fullName>
    <externalDeveloperName>Internal_Implementation_ID__c</externalDeveloperName>
    <label>Internal Implementation ID</label>
    <length>30</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>