force-app/main/default/objects/Implementation_Details_c__x/fields/Internal_Opportunity_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Internal_Opportunity_ID_c__c</fullName>
    <externalDeveloperName>Internal_Opportunity_ID__c</externalDeveloperName>
    <label>Internal Opportunity ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>