force-app/main/default/objects/Implementation_Details_c__x/fields/Intro_email_sent_c__c.field-meta.xml
<CustomField>
    <fullName>Intro_email_sent_c__c</fullName>
    <externalDeveloperName>Intro_email_sent__c</externalDeveloperName>
    <inlineHelpText>Date when the intro email was sent.</inlineHelpText>
    <label>Intro Email Sent</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>