force-app/main/default/objects/Implementation_Details_c__x/fields/Introduction_Call_and_Email_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Call_and_Email_Date_c__c</fullName>
    <externalDeveloperName>Introduction_Call_and_Email_Date__c</externalDeveloperName>
    <label>Forms Sent- IHOS</label>
    <type>Date</type>
</CustomField>