force-app/main/default/objects/Implementation_Details_c__x/fields/Introduction_Call_and_Email_DerbySoft_c__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Call_and_Email_DerbySoft_c__c</fullName>
    <externalDeveloperName>Introduction_Call_and_Email_DerbySoft__c</externalDeveloperName>
    <inlineHelpText>For IBS: date when the IM sends the self-service configuration email to the client</inlineHelpText>
    <label>Email sent- Distribution</label>
    <type>Date</type>
</CustomField>