force-app/main/default/objects/Implementation_Details_c__x/fields/iTrak_c__c.field-meta.xml
<CustomField>
    <fullName>iTrak_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>iTrak__c</externalDeveloperName>
    <label>iTrak</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>