force-app/main/default/objects/Implementation_Details_c__x/fields/iTrak_included_on_Contract_c__c.field-meta.xml
<CustomField>
    <fullName>iTrak_included_on_Contract_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>iTrak_included_on_Contract__c</externalDeveloperName>
    <label>iTrak included on Contract</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>