force-app/main/default/objects/Implementation_Details_c__x/fields/Last_ROI_Report_Sent_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Last_ROI_Report_Sent_Date_c__c</fullName>
    <externalDeveloperName>Last_ROI_Report_Sent_Date__c</externalDeveloperName>
    <label>Last ROI Report Sent Date</label>
    <type>Date</type>
</CustomField>