force-app/main/default/objects/Implementation_Details_c__x/fields/Link_TCCM_Link_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Link_TCCM_Link_Status_c__c</fullName>
    <externalDeveloperName>Link_TCCM_Link_Status__c</externalDeveloperName>
    <label>Link TCCM Link Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Impl - Assigned</fullName>
            </value>
            <value>
                <fullName>Impl - Information Needed in Forms</fullName>
            </value>
            <value>
                <fullName>Impl - Awaiting Forms</fullName>
            </value>
            <value>
                <fullName>Impl - Internal Product Dependency</fullName>
            </value>
            <value>
                <fullName>Impl - Working on Setup</fullName>
            </value>
            <value>
                <fullName>Impl - Awaiting Training</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>On Hold - Future Start Date</fullName>
            </value>
            <value>
                <fullName>On Hold - Pending interface/Website/Provider</fullName>
            </value>
            <value>
                <fullName>On Hold - Technical Issue</fullName>
            </value>
            <value>
                <fullName>On Hold - Unresponsive Implementation Escalated</fullName>
            </value>
            <value>
                <fullName>On Hold - Executive Review</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active - Awaiting Live Action</fullName>
            </value>
            <value>
                <fullName>Active - Conversion to Bundle</fullName>
            </value>
            <value>
                <fullName>Active - Transitioning to Customer Care</fullName>
            </value>
            <value>
                <fullName>Active - Unconsumed Bundle Component</fullName>
            </value>
            <value>
                <fullName>Active - Unconsumed Reseller Component</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Canceled/Terminated</fullName>
            </value>
            <value>
                <fullName>Rebuild</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>