force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_Air_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_Air_c__c</fullName>
    <externalDeveloperName>Live_Activation_Air__c</externalDeveloperName>
    <inlineHelpText>Date when property launches the Reserve Hotel BE on the website.</inlineHelpText>
    <label>Live Activation Date- Air</label>
    <type>Date</type>
</CustomField>