force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_Alternate_Payment_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_Alternate_Payment_c__c</fullName>
    <externalDeveloperName>Live_Activation_Alternate_Payment__c</externalDeveloperName>
    <inlineHelpText>Date when property goes live with Paypal/iDeal</inlineHelpText>
    <label>Live Activation Date- Alternate Payment</label>
    <type>Date</type>
</CustomField>