force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_CC_3rd_party_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_CC_3rd_party_c__c</fullName>
    <externalDeveloperName>Live_Activation_CC_3rd_party__c</externalDeveloperName>
    <inlineHelpText>date when test is successful</inlineHelpText>
    <label>Live Activation Date- CC 3rd party</label>
    <type>Date</type>
</CustomField>