force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_CCP_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_CCP_c__c</fullName>
    <externalDeveloperName>Live_Activation_CCP__c</externalDeveloperName>
    <label>Live Activation Date- CCP</label>
    <type>Date</type>
</CustomField>