force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_Date_Billing_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_Date_Billing_Date_c__c</fullName>
    <externalDeveloperName>Live_Activation_Date_Billing_Date__c</externalDeveloperName>
    <label>Live Activation Date Billing</label>
    <type>Date</type>
</CustomField>