force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_Date_c__c</fullName>
    <externalDeveloperName>Live_Activation_Date__c</externalDeveloperName>
    <inlineHelpText>When did this product go live with the account?
GMS: Estimated Date for Account to be fully live.</inlineHelpText>
    <label>Live Activation Date</label>
    <type>Date</type>
</CustomField>