force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_EQC_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_EQC_c__c</fullName>
    <externalDeveloperName>Live_Activation_EQC__c</externalDeveloperName>
    <inlineHelpText>date when Expedia is live through iH connection</inlineHelpText>
    <label>Live Activation Date- EQC</label>
    <type>Date</type>
</CustomField>