force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_IHOS_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_IHOS_c__c</fullName>
    <externalDeveloperName>Live_Activation_IHOS__c</externalDeveloperName>
    <inlineHelpText>&quot;if 2ways: date when last OTA is enabled for ARI365 and RD
if 1way: date when the last OTA is enabled for ARI365&quot;</inlineHelpText>
    <label>Live Activation Date- IHOS</label>
    <type>Date</type>
</CustomField>