force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_PMS_Channel_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_PMS_Channel_c__c</fullName>
    <externalDeveloperName>Live_Activation_PMS_Channel__c</externalDeveloperName>
    <inlineHelpText>date when property goes live in PMS channel connection</inlineHelpText>
    <label>Live Activation Date- PMS Channel</label>
    <type>Date</type>
</CustomField>