force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_RMS_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_RMS_c__c</fullName>
    <externalDeveloperName>Live_Activation_RMS__c</externalDeveloperName>
    <inlineHelpText>date when the RMS connection is live</inlineHelpText>
    <label>Live Activation Date- RMS</label>
    <type>Date</type>
</CustomField>