force-app/main/default/objects/Implementation_Details_c__x/fields/Live_Activation_WPS_c__c.field-meta.xml
<CustomField>
    <fullName>Live_Activation_WPS_c__c</fullName>
    <externalDeveloperName>Live_Activation_WPS__c</externalDeveloperName>
    <inlineHelpText>date when property is enrolled</inlineHelpText>
    <label>Live Activation Date- WPS</label>
    <type>Date</type>
</CustomField>