force-app/main/default/objects/Implementation_Details_c__x/fields/Look_and_feel_request_c__c.field-meta.xml
<CustomField>
    <fullName>Look_and_feel_request_c__c</fullName>
    <externalDeveloperName>Look_and_feel_request__c</externalDeveloperName>
    <inlineHelpText>date when IM sends the request for L&amp;F creation to Res Creative</inlineHelpText>
    <label>Look and feel request</label>
    <type>Date</type>
</CustomField>