force-app/main/default/objects/Implementation_Details_c__x/fields/Management_Company_c__c.field-meta.xml
<CustomField>
    <fullName>Management_Company_c__c</fullName>
    <externalDeveloperName>Management_Company__c</externalDeveloperName>
    <label>Management Company</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>