force-app/main/default/objects/Implementation_Details_c__x/fields/Management_Company_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Management_Company_Name_c__c</fullName>
    <externalDeveloperName>Management_Company_Name__c</externalDeveloperName>
    <label>Management Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>