force-app/main/default/objects/Implementation_Details_c__x/fields/Mapping_Audit_Completion_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Audit_Completion_Date_c__c</fullName>
    <externalDeveloperName>Mapping_Audit_Completion_Date__c</externalDeveloperName>
    <label>Mapping Audit Completion Date</label>
    <type>Date</type>
</CustomField>