force-app/main/default/objects/Implementation_Details_c__x/fields/Mapping_Audit_Due_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Audit_Due_Date_c__c</fullName>
    <externalDeveloperName>Mapping_Audit_Due_Date__c</externalDeveloperName>
    <label>Mapping Audit Due Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>