force-app/main/default/objects/Implementation_Details_c__x/fields/Mapping_Table_PMS_Channel_c__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Table_PMS_Channel_c__c</fullName>
    <externalDeveloperName>Mapping_Table_PMS_Channel__c</externalDeveloperName>
    <inlineHelpText>date when the PMS correlation table is sent to client</inlineHelpText>
    <label>Forms Sent- PMS Channel</label>
    <type>Date</type>
</CustomField>