force-app/main/default/objects/Implementation_Details_c__x/fields/Markup_Review_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Markup_Review_Date_c__c</fullName>
    <externalDeveloperName>Markup_Review_Date__c</externalDeveloperName>
    <label>Markup Review Date</label>
    <type>Date</type>
</CustomField>