force-app/main/default/objects/Implementation_Details_c__x/fields/Markup_Review_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Markup_Review_Goal_c__c</fullName>
    <externalDeveloperName>Markup_Review_Goal__c</externalDeveloperName>
    <label>Markup Review Goal</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>