force-app/main/default/objects/Implementation_Details_c__x/fields/Master_Bundle_Opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>Master_Bundle_Opportunity_c__c</fullName>
    <externalDeveloperName>Master_Bundle_Opportunity__c</externalDeveloperName>
    <label>Master Bundle Opportunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>