force-app/main/default/objects/Implementation_Details_c__x/fields/Metasearch_c__c.field-meta.xml
<CustomField>
    <fullName>Metasearch_c__c</fullName>
    <externalDeveloperName>Metasearch__c</externalDeveloperName>
    <inlineHelpText>automatically populated when impl detail is created</inlineHelpText>
    <label>% Metasearch</label>
    <length>5</length>
    <type>Text</type>
</CustomField>