force-app/main/default/objects/Implementation_Details_c__x/fields/Mid_term_Review_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Mid_term_Review_Comments_c__c</fullName>
    <externalDeveloperName>Mid_term_Review_Comments__c</externalDeveloperName>
    <label>Review Comments</label>
    <type>TextArea</type>
</CustomField>