force-app/main/default/objects/Implementation_Details_c__x/fields/Migration_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Migration_Status_c__c</fullName>
    <externalDeveloperName>Migration_Status__c</externalDeveloperName>
    <label>Migration Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to start migration</fullName>
            </value>
            <value>
                <fullName>BE 4.0 set-up completed</fullName>
            </value>
            <value>
                <fullName>Intro email sent</fullName>
            </value>
            <value>
                <fullName>Preview email sent</fullName>
            </value>
            <value>
                <fullName>Activation reminder sent</fullName>
                <label>Reminder Email sent</label>
            </value>
            <value>
                <fullName>BE 4.0 Live</fullName>
            </value>
            <value>
                <fullName>Optimizations needed</fullName>
            </value>
            <value>
                <fullName>GTM revisions needed</fullName>
            </value>
            <value>
                <fullName>Do Not Migrate</fullName>
            </value>
            <value>
                <fullName>Back on Web 3.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>