force-app/main/default/objects/Implementation_Details_c__x/fields/My_iHotelier_Implementations_2_c__c.field-meta.xml
<CustomField>
    <fullName>My_iHotelier_Implementations_2_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>My_iHotelier_Implementations_2__c</externalDeveloperName>
    <label>My iHotelier Implementations #2</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>