force-app/main/default/objects/Implementation_Details_c__x/fields/My_iHotelier_Implementations_c__c.field-meta.xml
<CustomField>
    <fullName>My_iHotelier_Implementations_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>My_iHotelier_Implementations__c</externalDeveloperName>
    <label>My iHotelier Implementations</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>