force-app/main/default/objects/Implementation_Details_c__x/fields/Need_Information_c__c.field-meta.xml
<CustomField>
    <fullName>Need_Information_c__c</fullName>
    <externalDeveloperName>Need_Information__c</externalDeveloperName>
    <label>Need Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>