force-app/main/default/objects/Implementation_Details_c__x/fields/Need_Information_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Need_Information_Date_c__c</fullName>
    <externalDeveloperName>Need_Information_Date__c</externalDeveloperName>
    <label>Need Information Date</label>
    <type>Date</type>
</CustomField>