force-app/main/default/objects/Implementation_Details_c__x/fields/New_Customer_c__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_c__c</fullName>
    <externalDeveloperName>New_Customer__c</externalDeveloperName>
    <label>New Customer</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>