force-app/main/default/objects/Implementation_Details_c__x/fields/No_Billing_Case_c__c.field-meta.xml
<CustomField>
    <fullName>No_Billing_Case_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>No_Billing_Case__c</externalDeveloperName>
    <inlineHelpText>Check if you do NOT want to create a Billing Case automatically</inlineHelpText>
    <label>No Billing Case</label>
    <type>Checkbox</type>
</CustomField>