force-app/main/default/objects/Implementation_Details_c__x/fields/Notes_Branded_URL_c__c.field-meta.xml
<CustomField>
    <fullName>Notes_Branded_URL_c__c</fullName>
    <externalDeveloperName>Notes_Branded_URL__c</externalDeveloperName>
    <label>Notes- Branded URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>