force-app/main/default/objects/Implementation_Details_c__x/fields/Notes_EQC_c__c.field-meta.xml
<CustomField>
    <fullName>Notes_EQC_c__c</fullName>
    <externalDeveloperName>Notes_EQC__c</externalDeveloperName>
    <label>Notes- EQC</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>