force-app/main/default/objects/Implementation_Details_c__x/fields/Notes_IHOS_c__c.field-meta.xml
<CustomField>
    <fullName>Notes_IHOS_c__c</fullName>
    <externalDeveloperName>Notes_IHOS__c</externalDeveloperName>
    <label>Notes- IHOS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>