force-app/main/default/objects/Implementation_Details_c__x/fields/Opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_c__c</fullName>
    <externalDeveloperName>Opportunity__c</externalDeveloperName>
    <label>Opportunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>