force-app/main/default/objects/Implementation_Details_c__x/fields/Opportunity_Owner_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_c__c</fullName>
    <externalDeveloperName>Opportunity_Owner__c</externalDeveloperName>
    <label>Opportunity Owner</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>