force-app/main/default/objects/Implementation_Details_c__x/fields/Optimization_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Comments_c__c</fullName>
    <externalDeveloperName>Optimization_Comments__c</externalDeveloperName>
    <label>Optimization Comments</label>
    <type>TextArea</type>
</CustomField>