force-app/main/default/objects/Implementation_Details_c__x/fields/Optimization_completed_c__c.field-meta.xml
<CustomField>
    <fullName>Optimization_completed_c__c</fullName>
    <externalDeveloperName>Optimization_completed__c</externalDeveloperName>
    <inlineHelpText>Date when optimization was completed</inlineHelpText>
    <label>Optimization Completed</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>