force-app/main/default/objects/Implementation_Details_c__x/fields/Opty_Sales_Credit_c__c.field-meta.xml
<CustomField>
    <fullName>Opty_Sales_Credit_c__c</fullName>
    <externalDeveloperName>Opty_Sales_Credit__c</externalDeveloperName>
    <label>Opty Sales Credit</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>