force-app/main/default/objects/Implementation_Details_c__x/fields/Oracle_Completion_Air_c__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Completion_Air_c__c</fullName>
    <externalDeveloperName>Oracle_Completion_Air__c</externalDeveloperName>
    <inlineHelpText>IM to update Oracle when Air+Hotel goes live</inlineHelpText>
    <label>Oracle Completion Date- Air</label>
    <type>Date</type>
</CustomField>