force-app/main/default/objects/Implementation_Details_c__x/fields/Oracle_Completion_Alternate_Payment_c__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Completion_Alternate_Payment_c__c</fullName>
    <externalDeveloperName>Oracle_Completion_Alternate_Payment__c</externalDeveloperName>
    <inlineHelpText>IM to update Oracle when  Paypal/iDeal goes live</inlineHelpText>
    <label>Oracle Completion Date- Alternate</label>
    <type>Date</type>
</CustomField>